--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,14 @@
   font-weight: 400;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
+}
+h1{
+  font-weight: 900;
+  font-style: italic;
+}
